<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="14dp"
        android:text="@string/keystore_notice"
        android:textColor="@color/c_666666"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_import_wallet_keystore"
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/shape_import_wallet_tv_bg"
        android:gravity="top|start"
        android:hint="@string/keystore_content"
        android:paddingBottom="8dp"
        android:paddingEnd="13dp"
        android:paddingStart="13dp"
        android:paddingTop="8dp"
        android:textColorHint="@color/c_999999"
        android:textSize="14sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_import_wallet_keystore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/et_import_wallet_keystore_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="16"
            android:hint="@string/keystore_pwd"
            android:inputType="textPassword"
            android:textColorHint="@color/c_999999"
            android:textSize="@dimen/et_create_wallet_font_size" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="horizontal"
        android:paddingStart="22dp">

        <ImageButton
            android:id="@+id/ib_import_wallet_keystore_privacy_point"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@null"
            android:src="@drawable/selector_privacy_point" />

        <TextView
            android:id="@+id/tv_import_wallet_keystore_privacy_have_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_have_read_terms"
            android:textSize="@dimen/create_wallet_rb_text_size" />

        <TextView
            android:id="@+id/tv_import_wallet_keystore_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/create_wallet_tv_margin_start"
            android:text="@string/privacy_terms"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/create_wallet_rb_text_size" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_import_wallet_keystore"
        android:layout_width="267dp"
        android:layout_height="33dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="123dp"
        android:background="@drawable/shape_import_wallet_bt_bg_def"
        android:text="@string/start_import"
        android:textAllCaps="false"
        android:textColor="@color/c_666666"
        android:textSize="14sp" />
</LinearLayout>