<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="chinapex.com.wallet.view.wallet.CreateWalletActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_create_wallet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/create_wallet_tb_height"
        android:background="@drawable/tb_bg"
        android:gravity="top"
        android:padding="@dimen/tb_title_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/create_wallet"
            android:textColor="@android:color/white"
            android:textSize="@dimen/tb_title_size" />
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/create_wallet_tv_margin_top"
        app:cardCornerRadius="6dp"
        app:cardElevation="5dp">

        <TextView
            android:id="@+id/tv_create_wallet_security"
            android:layout_width="@dimen/create_wallet_tv_width"
            android:layout_height="@dimen/create_wallet_tv_height"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:paddingBottom="17dp"
            android:paddingEnd="13dp"
            android:paddingStart="13dp"
            android:paddingTop="17dp"
            android:text="@string/security"
            android:textSize="@dimen/create_wallet_tv_size" />
    </android.support.v7.widget.CardView>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_create_wallet_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_create_wallet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:hint="@string/wallet_name"
            android:inputType="text"
            android:textSize="@dimen/et_create_wallet_font_size" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_create_wallet_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_create_wallet_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/et_create_wallet_font_size" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_create_wallet_repeat_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_create_wallet_repeat_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:textSize="@dimen/et_create_wallet_font_size" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ib_create_wallet_privacy_point"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@null"
            android:src="@drawable/icon_privacy_def" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/i_have_read_terms"
            android:textSize="@dimen/create_wallet_rb_text_size" />

        <TextView
            android:id="@+id/tv_create_wallet_privacy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/create_wallet_tv_margin_start"
            android:gravity="center_vertical"
            android:text="@string/privacy_terms"
            android:textColor="@color/c_1253BF"
            android:textSize="@dimen/create_wallet_rb_text_size" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_create_wallet_confirm"
        android:layout_width="@dimen/create_wallet_bt_confirm_width"
        android:layout_height="@dimen/create_wallet_bt_confirm_height"
        android:layout_marginTop="@dimen/create_wallet_bt_margin_top"
        android:background="@drawable/shape_gray_bt_bg"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/c_979797"
        android:textSize="14sp" />

    <Button
        android:id="@+id/bt_create_wallet_import"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="bottom|center_horizontal"
        android:text="@string/import_wallet"
        android:textAllCaps="false"
        android:textColor="@color/c_666666"
        android:textSize="@dimen/create_wallet_et_import_size" />

    <View
        android:layout_width="@dimen/activity_create_wallet_underline_width"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/c_979797" />

</LinearLayout>
